# resume-builder

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  USER_DATA.md  build.sh  docker-compose.yml  pyproject.toml  variant_config.example.json
.claude/: settings.json
.github/workflows/: ci.yml
docs/: ai-workflow.md  config-state-contract.md  customization.md  getting-started.md
docs/research/: gatda-investment.md  index.md  jd-auto-known-issues.md  jd-company-info-2026-05-08.md
example/interview/: style-sheet.css
example/job_postings/: jd-screening-rules.md
example/profile/: awards.md  contact.md  education.md  languages.md  skills-job.md  skills-public.md  summary-job.md  summary-public.md
jd_analysis/interview/: build-sheet.py  sample-technova-backend-engineer.md
job_postings/: jd-screening-rules-template.md
job_postings/examples/: jd-screening-rules-sample.md
scripts/: screen-jds.sh  sync_config.example.yaml  sync_dashboard.py
templates/: company_validator.py  jd_auto.py  jd_pipeline.py  jd_queue_utils.py  jd_search.py  jd_search_quick.py  jd_utils.py  jd_worker.py  layout.md  resume_builder.py  schema.py  style-short.css  style.css  test_jd_status.py  test_schema.py
templates/jd/: append_reclass_summary.py  audit_05.py  audit_hold_causes.py  audit_hypotheses.py  audit_overlap.py  audit_sampler.py  auto.py  auto_company.py  auto_extractors.py  auto_processor.py  auto_screening.py  auto_state.py  backfill_closed_jds.py  backfill_prior_applications.py  backfill_wanted_company_info.py  browser_utils.py  ce_jd_files.py  ce_merge.py  ce_saramin.py  ce_thevc.py  ce_types.py  ce_wanted.py  (+40 more)
(+84 files in other folders)
