[project]
name = "resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.58.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pygments>=2.20.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["templates/tests"]
pythonpath = ["templates/build", "templates/jd", "example/interview"]
