[project]
name = "resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "patchright>=1.58.0",
    "playwright>=1.58.0",
    "python-docx>=1.1.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pygments>=2.20.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["templates/tests"]
pythonpath = ["templates/build", "templates/jd", "example/interview"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
include = ["templates/jd", "templates/build"]
extraPaths = ["templates/build", "templates/jd", "example/interview"]
